2002-02-14  Lauris Kaplinski  <lauris@ximian.com>

	* capplet-dir-view-tree.c: Remove #undef GTK_DISABLE_DEPRECATED,
	so if included again we see warnings

	* capplet-dir.c: Remove <bonobo.h> which was unused

	* main.c: Remove <bonobo.h> which was unused

	* preferences.c (read_preferences): Remove LAYOUT_TREE
	(place_preferences): Ditto

	* preferences.h: Remove LAYOUT_TREE from preferences

	* capplet-dir-view.c: Removed capplet_dir_view_tree
	(capplet_dir_view_set_prop): Ditto

	* Makefile.am: Remove capplet-dir-view-tree from SOURCES

2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* preferences.c (prefs_dialog_ok_cb): Destroy widget instead of
	gnome_dialog_close
	(prefs_dialog_cancel_cb): Ditto
	(prefs_dialog_response): Common button click handler
	(gnomecc_preferences_get_config_dialog): Connect GtkDialog 'response' signal

	* capplet-dir-view.c (capplet_dir_view_load_dir): Replace deprecated methods,
	use gdk_pixbuf/gtk_image instead of gnome_pixmap
	(prefs_changed_cb): Use g_object_set
	(option_menu_activate): Use g_object_set_data

2002-02-08  Richard Hestilow  <hestilow@ximian.com>
	
	* main.c (main): Ignore nautilus if run with --use-shell.

2002-02-06  Mark McLoughlin  <mark@skynet.ie>

	* gnomecc.desktop.in: change Exec from gnomecc to
	gnome2-control-center.

2002-02-05  jacob berkman  <jacob@ximian.com>

	* gnomecc.desktop.in (Icon): 
	* capplet-dir.c (find_icon): use control-center2.png

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* capplet-dir-view-tree.c (populate_tree_branch): Use
	g_object unref instead of gdk_pixbuf_unref

	* capplet-dir-view-list.c (list_clean): Use g_object_unref
	(sidebar_arrow_update): g_build_filename
	(list_create): Replace deprecated methods

	* preferences.c (gnomecc_preferences_class_init): Use g_signal_new
	(read_preferences): Use g_signal_emit

	* capplet-dir.c (find_icon): Use glib methods instead of
	deprecated stuff

2002-01-21  Richard Hestilow  <hestilow@ximian.com>
